# dotfiles-maintainer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/dotfiles_maintainer/: cli.py  config.py  server.py
src/dotfiles_maintainer/core/: memory.py  types.py
src/dotfiles_maintainer/prompts/: persona.py
src/dotfiles_maintainer/tools/: baseline.py  changes.py  drift.py  health.py  history.py  lifecycle.py  queries.py  roadmap.py  trials.py  troubleshooting.py  updates.py
src/dotfiles_maintainer/utils/: vcs.py
tests/: test_cli.py  test_config.py  test_health.py  test_integration.py  test_memory.py  test_server.py  test_tools.py  test_vcs.py
